--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -21,6 +21,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.10.3</version>
+        </dependency>
+        <dependency>
             <groupId>fastutil</groupId>
             <artifactId>fastutil</artifactId>
             <version>5.0.9</version>
