--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -93,14 +93,14 @@
             <version>3.2</version>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.matrix-toolkits-java</groupId>
-            <artifactId>mtj</artifactId>
-            <version>1.0.3</version>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>2.4.8</version>
         </dependency>
         <dependency>
-            <groupId>org.ojalgo</groupId>
-            <artifactId>ojalgo</artifactId>
-            <version>48.2.0</version>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.12</artifactId>
+            <version>3.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.ujmp</groupId>
