--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,5 +16,7 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      - name: Maven Clean
+        run: timeout 600 mvn clean --file Core/pom.xml
       - name: Run tests with Maven
         run: timeout 600 mvn -B test --file Core/pom.xml
