--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Install Blas/Lapack
-        run: apt-get install libblas-dev liblapack-dev
+        run: sudo apt-get install libopenblas-dev liblapack-dev
       - name: Maven Clean
         run: timeout 600 mvn clean --file Core/pom.xml
       - name: Run tests with Maven
