--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,24 +1,20 @@
 name: tests
-on: push
+on:
+  workflow_run:
+    workflows: ["Publish Docker image"]
+    branches: [master]
+    types: 
+      - completed
 jobs:
   run_tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 14
-        uses: actions/setup-java@v1
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          java-version: 14
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Install Blas/Lapack
-        run: sudo apt-get install libopenblas-dev liblapack-dev
-      - name: Maven Clean
-        run: timeout 600 mvn clean --file Core/pom.xml
-      - name: Run tests with Maven
-        run: timeout 600 mvn -B test --file Core/pom.xml
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Pull Docker
+        run: docker pull tovermodus/jfem:master
+      - name run Tests
+        run: docker run tovermodus/jfem:master timeout 1000 mvn -B test -file=Core/pom.xml
