--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: wait
+        run: sleep 300
       - name: Pull Docker
         run: docker pull tovermodus/jfem:master
       - name: run Tests
